--- a/page2.html
+++ b/page2.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> newss!!!</title>
    <style>
-   body, html{  background-image: url('https://github.com/lamprosxd/mypage/blob/main/allah4.png?raw=true');
+   body, html{font-family:"SourceCodeVF","Arial"; background-image: url('allah4.png');
+  height:100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-position:center}
+  background-position:center
+  }
    
 
   
@@ -22,9 +24,11 @@
   background:#978c73;
 }
 
-  .border2{ margin:center; center; margin-left:45%; margin-top:-40%; text-align:center;
+  .border2{position:relative; margin: 0 auto; top:-780px;text-align:center;
    border-radius: 15px;
-  border: 2px solid black;
+  border: 5px;
+  border-color:black;
+  border-style:ridge;
   padding: 20px; 
   width: 200px;
   background:#978c73;
@@ -32,14 +36,16 @@
 }
 
   .border3{
-  border: 2px solid black;
+  border: 2px ;
+  border-style:dotted;
   padding: 20px; 
   width: 155px;
   background:white; 
 }
   .button{
-  border: 2px solid black;
-}
+  border: 2px solid black; background:white;}
+.line{border-bottom: 2px solid black; margin-top: 5px; margin-left:-20px; width: 120%; }
+.line2 { font-size:26px; color:black; border-left: 2px solid black; margin-top:-55px; margin-left:185px;  height: 27px;}
 
   
   </style>
@@ -47,6 +53,8 @@
   <body>
   
   <div class="border1">
+  <div class="line"></div>
+    <div class="line2"><a style="color:black; text-decoration: none;" href="https://uboae.neocities.org"><p style="margin-left:50%;"> X </p></a></div>
     <h1>News!!!</h1>
 
     <p>Date of creation 24/10/2024</p>
@@ -64,13 +72,13 @@
       <li>link a spotify api to display my playlists</li>
     </ul>
     
-    <div class="button"><h4> <a href="https://uboae.neocities.org" style="color:blue;"> < back < </a><h4> </div>
+    <div class="button"><a href="https://uboae.neocities.org" style="font-size:30px; text-decoration-thickness:2px; font-weight:bold; color:blue;"> << back << </a> </div>
 </div>
 
-<div class="border1"><p>erg<br>serx</p></div>
+<div class="border1"><h3>NOW PLAYING:</h3><h4><i>this is where i plan to feature my music</i></h4></div>
 
-<div class="border2"><div class="border3"> <h3>25 October 2024</h3> <br> <p> hiiii, I wasted my entire day trying to learn html, i didnt even get up to close the window and now im cold. </p>  </div></div>
-
+<div class="border2"><div class="border3"> <h3>25 October 2024</h3><p> Made some changes regarding the layout and the scaling.</p></div></div>
+<div class="border2"><div class="border3"> <h3>25 October 2024</h3> <br> <p> hiiii, I wasted my entire day trying to learn html. </p>  </div></div>
 
   </body>
 </html>
